@@ -1,6 +1,6 @@
 /*
 
-  Copyright (C) 2000,2002,2004 Silicon Graphics, Inc.  All Rights Reserved.
+  Copyright (C) 2000,2002,2004,2005 Silicon Graphics, Inc.  All Rights Reserved.
 
   This program is free software; you can redistribute it and/or modify it
   under the terms of version 2.1 of the GNU Lesser General Public License 
@@ -67,6 +67,8 @@ dwarf_get_pubtypes(Dwarf_Debug dbg,
 	ret_type_count,
 	error,
 	DW_DLA_PUBTYPES_CONTEXT,
+	DW_DLA_GLOBAL,  /* We don't have DW_DLA_PUBTYPES,
+		so use DW_DLA_GLOBAL. */
 	DW_DLE_DEBUG_PUBTYPES_LENGTH_BAD,
 	DW_DLE_DEBUG_PUBTYPES_VERSION_ERROR);
 }
@@ -81,7 +83,8 @@ dwarf_pubtypes_dealloc(Dwarf_Debug dbg, Dwarf_Type *dwgl, Dwarf_Signed count)
    _dwarf_internal_globals_dealloc(dbg, (Dwarf_Global *)dwgl,
                 count,
         DW_DLA_PUBTYPES_CONTEXT,
-        DW_DLA_GLOBAL,
+        DW_DLA_GLOBAL,  /* We don't have DW_DLA_PUBTYPES,
+                so use DW_DLA_GLOBAL. */
         DW_DLA_LIST);
    return;
 }
